--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,14 @@ jobs:
       - name: Login to Github registry
         run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Convert repository name to lowercase
+        run: | 
+          echo "REPO_LC=${REPO,,}" >>${GITHUB_ENV}
+        env: '${{ github.repository }}'
+      
       - name: Build, tag and push Docker image
         run: | 
-          IMG=ghcr.io/${{ github.repository }}
+          IMG=ghcr.io/$REPO_LC
           docker build \
             --tag $IMG:${{ env.version }} \
             --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
