--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      - name: Convert repository name to lowercase
-        run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >> ${GITHUB_ENV}
     steps:
       - uses: actions/checkout@v4
       - name: Parse version info from tag
@@ -25,9 +21,15 @@ jobs:
       - name: Login to Github registry
         run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Convert repository name to lowercase
+        run: | 
+          echo "REPO_LC=${REPO,,}" >>${GITHUB_ENV}
+        env: 
+          REPO: '${{ github.repository }}'
+
       - name: Build, tag and push Docker image
         run: | 
-          IMG=ghcr.io/${{ env.REPO }}
+          IMG=ghcr.io/${{ REPO_LC }}
           docker build \
             --tag $IMG:${{ env.version }} \
             --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
