--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,9 @@ jobs:
         run: | 
           IMG=ghcr.io/${{ env.REPO_LC }}
           docker build \
-            --tag $IMG:${{ env.version }} \
-            --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
-            --tag $IMG:${{ env.version_major }}.latest \
-            --tag $IMG:latest \
+            -t $IMG:${{ env.version }} \
+            -t $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
+            -t $IMG:${{ env.version_major }}.latest \
+            -t $IMG:latest \
+            .
           docker push --all-tags $IMG
