--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,9 @@ jobs:
       - name: Parse version info from tag
         run: |
           VERSION=${GITHUB_REF:11}
-          MAJOR='echo "$VERSION" | cut -d . -f 1'
-          MINOR='echo "$VERSION" | cut -d . -f 2'
-          PATCH='echo "$VERSION" | cut -d . -f 3'
+          MAJOR=`echo "$VERSION" | cut -d . -f 1`
+          MINOR=`echo "$VERSION" | cut -d . -f 2`
+          PATCH=`echo "$VERSION" | cut -d . -f 3`
           echo "version=$VERSION" >> $GITHUB_ENV
           echo "version_major=$MAJOR" >> $GITHUB_ENV
           echo "version_minor=$MINOR" >> $GITHUB_ENV
@@ -22,10 +22,10 @@ jobs:
         run: echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Convert repository name to lowercase
-        run: | 
-          echo "REPO_LC=${REPO,,}" >>${GITHUB_ENV}
+        run: |
+          echo "REPO_LC=$(echo $REPO | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
         env: 
-          REPO: '${{ github.repository }}'
+          REPO: ${{ github.repository }}
 
       - name: Build, tag and push Docker image
         run: | 
