--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ numpy==1.26.4
 scikit-learn==1.4.2
 tensorflow==2.16.1
 lib-ml @ git+https://github.com/Release-Engineering-Group-13/lib-ml.git@84f5d8f7b3c1750b76671bae2e73ae4813d4d88e
+ellipsis
